# guardian-ai-assistant

./: .gitignore  README.md
guardian_cloud/backend/: .env.example  api.py  mqtt_subscriber.py  requirements.txt
guardian_cloud/frontend/: index.html
guardian_esp32_ai/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  wifi_config.csv
guardian_esp32_ai/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  device_state.h  idf_component.yml  main.cc  settings.cc  system_info.cc  system_info.h
guardian_esp32_ai/main/audio/: README.md  audio_codec.h  audio_processor.h  audio_service.cc  audio_service.h
guardian_esp32_ai/main/audio/codecs/: no_audio_codec.cc  no_audio_codec.h
guardian_esp32_ai/main/audio/demuxer/: ogg_demuxer.cc  ogg_demuxer.h
guardian_esp32_ai/main/audio/processors/: afe_audio_processor.cc  afe_audio_processor.h  audio_debugger.h  no_audio_processor.cc  no_audio_processor.h
guardian_esp32_ai/main/audio/wake_words/: afe_wake_word.cc  afe_wake_word.h
guardian_esp32_ai/main/boards/common/: board.cc  board.h  wifi_board.cc  wifi_board.h
guardian_esp32_ai/main/boards/guardian-s3/: config.h  guardian_s3_board.cc
guardian_esp32_ai/main/protocols/: protocol.cc  protocol.h  websocket_protocol.cc  websocket_protocol.h
guardian_esp32_ai/main/sensor_gateway/: sensor_gateway.c  sensor_gateway.h
guardian_f407/: .config  .cproject  .project  Kconfig  rtconfig.h
guardian_f407/applications/: SConscript  algo_spo2.c  algo_spo2.h  data_logger.c  data_logger.h  display_status.c  display_status.h  esp_comm.c  esp_comm.h  lte_driver.c  lte_driver.h  main.c  oled_ssd1306.c  oled_ssd1306.h  sensor_bh1750.c  sensor_bh1750.h  sensor_bme280.c  sensor_bme280.h  sensor_gps.c  sensor_gps.h  sensor_max30102.c  sensor_max30102.h  sensor_mpu6050.c  sensor_mpu6050.h  sensor_mq_gas.c  sensor_mq_gas.h  storage_sd.c  ws2812b.c  ws2812b.h
guardian_f407/cubemx/: cubemx.ioc
guardian_f407/drivers/: board.c  board.h  drv_adc.c  drv_usart.c  stm32f4xx_hal_conf.h
guardian_f407/rt-thread/components/drivers/spi/: spi_msd.c
guardian_server/: funasr_http_service.py  update_ip.ps1
guardian_server/main/xiaozhi-server/: config.yaml
guardian_server/main/xiaozhi-server/core/: connection.py
guardian_server/main/xiaozhi-server/core/handle/: sendAudioHandle.py
guardian_server/main/xiaozhi-server/core/providers/asr/: fun_local.py
guardian_server/main/xiaozhi-server/core/providers/tts/: index_stream.py
guardian_server/main/xiaozhi-server/data/: .config.yaml.example  .wakeup_words.yaml
guardian_server/main/xiaozhi-server/performance_tester/: performance_tester_stream_tts.py
guardian_server/main/xiaozhi-server/plugins_func/functions/: get_weather.py
guardian_server/voiceprint_service/: app.py  register.py  requirements.txt
guardian_server/voiceprint_service/speakers/: embeddings.json
guardian_taishanpi/boot/: cma-128m.dts
guardian_taishanpi/rknn/zerocopy/: __init__.py  enroll_face.py  face_api.py  pipeline_carry.py  pipeline_zerocopy.py  screenshot_chart.py
guardian_taishanpi/rknn/zerocopy/lib/: __init__.py  face_recognizer.py  object_detector.py  pose_analyzer.py  postprocess_trunc.py  rga_helper.py  v4l2_helper.py
